added pagination for the movies page, added infinite scroll for rentals page, reversed the order in which the movies are displayed in the movies and rentals page